# busytok

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING-WORKFLOW.md  CONTRIBUTING.md  Cargo.toml  DESIGN-SYSTEM.md  DESIGN.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/cli/: Cargo.toml
apps/cli/src/: commands.rs  commands_subagent.rs  main.rs  shim.rs
apps/cli/src/commands/: mod.rs  models.rs  provider.rs
apps/cli/tests/: coverage_gaps.rs  coverage_gaps_cli.rs  export.rs  help.rs  prompt.rs  scan.rs  settings.rs  shim.rs
apps/gui/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json  prompt-palette.json
apps/gui/src-tauri/src/: activation_context.rs  activation_context_tests.rs  bootstrap.rs  bootstrap_lock.rs  bootstrap_lock_tests.rs  cli_auto_install.rs  commands.rs  commands_tests.rs  desktop_host.rs  desktop_host_tests.rs  desktop_lifecycle_settings.rs  desktop_login_start.rs  desktop_menu.rs  desktop_runtime.rs  desktop_runtime_tests.rs  desktop_service_status.rs  desktop_shortcut.rs  desktop_shortcut_tests.rs  desktop_windows.rs  desktop_windows_tests.rs  host_application_services.rs  host_application_services_tests.rs  lib.rs  lifecycle_coordinator.rs  logging.rs  macos_persistent_state.rs  macos_persistent_state_tests.rs  main.rs  (+12 more)
apps/service/: Cargo.toml
apps/service/src/: main.rs
crates/busytok-adapters/: Cargo.toml
crates/busytok-adapters/src/: adapter.rs  claude.rs  codex.rs  lib.rs
crates/busytok-adapters/tests/: claude_adapter.rs  future_agent_contracts.rs
crates/busytok-aggregator/: Cargo.toml
crates/busytok-aggregator/src/: blocks.rs  daily.rs  lib.rs  mutations.rs  summary.rs
crates/busytok-aggregator/tests/: coverage_gaps.rs  daily.rs  recompute_rules.rs  scan_mutations.rs
crates/busytok-config/: Cargo.toml
crates/busytok-config/src/: lib.rs  logging.rs  manifest.rs  paths.rs  providers.rs  service_marker.rs
crates/busytok-config/tests/: config_paths.rs  coverage_gaps.rs  coverage_gaps_config.rs  coverage_gaps_logging_cli.rs  subagent_paths.rs  subagent_settings.rs
crates/busytok-control/: Cargo.toml
crates/busytok-control/src/: client.rs  dispatch.rs  lib.rs  protocol.rs  server.rs
crates/busytok-control/tests/: control_methods.rs  coverage_gaps.rs  coverage_gaps_dispatch.rs  dispatch.rs  protocol_over_in_memory.rs  server.rs
crates/busytok-discovery/: Cargo.toml
crates/busytok-discovery/src/: claude.rs  codex.rs  lib.rs  source.rs
crates/busytok-discovery/tests/: claude_discovery.rs  codex_discovery.rs  coverage_gaps_discovery.rs
crates/busytok-domain/: Cargo.toml
crates/busytok-domain/src/: agent.rs  cache_metrics.rs  events.rs  identity.rs  lib.rs  provider_catalog.rs  time.rs  timezone.rs
crates/busytok-domain/tests/: coverage_gaps_domain.rs  events.rs  identity.rs
crates/busytok-events/: Cargo.toml
crates/busytok-events/src/: lib.rs
crates/busytok-events/tests/: event_bus.rs
crates/busytok-platform/: Cargo.toml
crates/busytok-platform/src/: lib.rs  macos.rs  unsupported.rs  windows.rs
crates/busytok-platform/tests/: coverage_gaps.rs  platform_paths.rs
crates/busytok-pricing/: Cargo.toml
crates/busytok-pricing/src/: PRICE_CATALOG_FORMAT.md  lib.rs  price_catalog.json
crates/busytok-pricing/tests/: pricing.rs
crates/busytok-runtime/: Cargo.toml
crates/busytok-runtime/src/: aggregates.rs  bootstrap.rs  generation_manager.rs  lib.rs  queue.rs  range.rs  read_service.rs  rebuild.rs  receipt.rs  sampler.rs  scan.rs  service_app.rs  source_registry.rs  status.rs  subagent_usage.rs  supervisor.rs  tail.rs  ui_models.rs  writer.rs
crates/busytok-runtime/tests/: catalog_snapshot.rs  coverage_gaps_core.rs  coverage_gaps_gaps.rs  coverage_gaps_runtime.rs  coverage_gaps_small.rs  coverage_gaps_tail.rs  coverage_gaps_writer.rs  multi_agent_scan.rs  provider_catalog.rs  queue_types.rs  read_service.rs  rebuild_replay.rs  residual_cleanup.rs  sampler.rs  scan_pipeline.rs  sidecar_bundling_doctor.rs  sidechain_e2e.rs  subagent_e2e_sidecar.rs  supervisor_control.rs  supervisor_coverage.rs  supervisor_shutdown.rs  tail_lifecycle.rs  writer_actor.rs
crates/busytok-store/: Cargo.toml
crates/busytok-store/migrations/: 0001_baseline.sql  0002_cache_metrics.sql  0003_subagent.sql  0004_subagent_task_fields.sql  0005_provider_catalog_and_subagent_route_binding.sql  0005_subagent_task_error_kind.sql  0006_provider_catalog.sql  0006_subagent_queue_reason.sql  0007_subagent_route_binding_and_model_metadata.sql
crates/busytok-store/src/: db.rs  generation_commands.rs  generation_queries.rs  lib.rs  live_queries.rs  outbox_queries.rs  prompt_entries.rs  provider_catalog.rs  read_models.rs  read_queries.rs  repository.rs  schema.rs  source_queries.rs  subagent_queries.rs  write_queries.rs
crates/busytok-store/tests/: coverage_gaps_db.rs  coverage_gaps_read_queries.rs  coverage_gaps_store.rs  coverage_gaps_subagent_queries.rs  coverage_gaps_write_queries.rs  diagnostic_retention.rs  generation_commands.rs  generation_queries.rs  live_queries.rs  log_source_upsert.rs  migrations.rs  prompt_entries.rs  provider_catalog.rs  read_queries.rs  read_query_performance.rs  scan_transactions.rs  sidechain_dedup.rs  source_queries.rs  subagent_queries.rs  subagent_rows.rs  tool_events.rs  usage_events.rs  write_queries.rs
crates/busytok-subagent/: Cargo.toml
crates/busytok-subagent/src/: context.rs  error.rs  lib.rs  manager.rs  memory.rs  mock_executor.rs  models.rs  pressure.rs  resolver.rs  resource.rs  util.rs
crates/busytok-subagent/tests/: context.rs  coverage_gaps.rs  error.rs  manager.rs  manager_queue.rs  memory.rs  models.rs  pressure.rs  resolver.rs  resource.rs  sidecar_client.rs  sidecar_config.rs  sidecar_executor.rs  sidecar_pool.rs  sidecar_protocol.rs  sidecar_supervisor.rs
crates/busytok-tailer/: Cargo.toml
crates/busytok-tailer/src/: lib.rs  scanner.rs  tailer.rs
crates/busytok-tailer/tests/: coverage_gaps.rs  half_line.rs  scanner.rs
(+423 files in other folders)
