[workspace]
resolver = "2"
members = [
  "apps/gui/src-tauri",
  "apps/service",
  "apps/cli",
  "crates/busytok-domain",
  "crates/busytok-config",
  "crates/busytok-pricing",
  "crates/busytok-discovery",
  "crates/busytok-adapters",
  "crates/busytok-tailer",
  "crates/busytok-store",
  "crates/busytok-subagent",
  "crates/busytok-aggregator",
  "crates/busytok-events",
  "crates/busytok-runtime",
  "crates/busytok-protocol",
  "crates/busytok-control",
  "crates/busytok-platform",
]

[workspace.package]
edition = "2021"
rust-version = "1.88.0"
license = "Apache-2.0"

[workspace.dependencies]
arc-swap = "1"
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dirs = "6"
hex = "0.4"
notify = "8"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "macros", "local-offset"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync", "signal", "io-util", "process"] }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
tracing-log = "0.2"
ts-rs = { version = "10", features = ["serde-json-impl"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
jiff = "0.2"

[workspace.lints.rust]
unexpected_cfgs = "allow"
