[package]
name = "busytok-aggregator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
busytok-domain = { path = "../busytok-domain" }
busytok-store = { path = "../busytok-store" }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["parsing"] }
tracing = { workspace = true }

[dev-dependencies]
