[package]
name = "busytok-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
busytok-domain = { path = "../busytok-domain" }
dirs = { workspace = true }
# keyring 4.x: default features enable the `v1` API (Entry::new/set_password/...)
# which uses macOS Keychain via `apple-native-keyring-store` and Windows
# Credential Manager via `windows-native-keyring-store` on those platforms.
# (The brief's `apple-native`/`windows-native` feature names were renamed
# during the v4.0 stable release; the defaults now provide the same behavior.)
keyring = "4"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }
