[package]
name = "busytok-platform"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
busytok-config = { path = "../busytok-config" }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
