[package]
name = "busytok-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
busytok-domain = { path = "../busytok-domain" }
busytok-config = { path = "../busytok-config" }
busytok-discovery = { path = "../busytok-discovery" }
busytok-adapters = { path = "../busytok-adapters" }
busytok-tailer = { path = "../busytok-tailer" }
busytok-store = { path = "../busytok-store" }
busytok-subagent = { path = "../busytok-subagent" }
busytok-aggregator = { path = "../busytok-aggregator" }
busytok-events = { path = "../busytok-events" }
busytok-pricing = { path = "../busytok-pricing" }
busytok-control = { path = "../busytok-control" }
busytok-protocol = { path = "../busytok-protocol" }
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
sha2.workspace = true
hex.workspace = true
rusqlite.workspace = true
dirs = "6"

[dev-dependencies]
tempfile.workspace = true
futures = "0.3"
tracing-subscriber = { workspace = true }
