[package]
name = "busytok-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
busytok-domain = { path = "../busytok-domain" }
busytok-protocol = { path = "../busytok-protocol" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
busytok-aggregator = { path = "../busytok-aggregator" }
