[package]
name = "busytok-subagent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
busytok-store = { path = "../busytok-store" }
busytok-config = { path = "../busytok-config" }
busytok-domain = { path = "../busytok-domain" }
anyhow.workspace = true
serde = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints.rust]
unexpected_cfgs = "allow"
