[package]
name = "busytok-subagent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
busytok-store = { path = "../busytok-store" }
busytok-config = { path = "../busytok-config" }
busytok-domain = { path = "../busytok-domain" }
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "time", "sync", "rt-multi-thread", "macros"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
rusqlite.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[lints.rust]
unexpected_cfgs = "allow"
